; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_configfiles.c_try_load_config.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_configfiles.c_try_load_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Loading config '%s'\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.MPContext*, i8*, i32, i32)* @try_load_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @try_load_config(%struct.MPContext* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.MPContext*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.MPContext* %0, %struct.MPContext** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @mp_path_exists(i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %25

14:                                               ; preds = %4
  %15 = load %struct.MPContext*, %struct.MPContext** %6, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @MP_MSG(%struct.MPContext* %15, i32 %16, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %17)
  %19 = load %struct.MPContext*, %struct.MPContext** %6, align 8
  %20 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @m_config_parse_config_file(i32 %21, i8* %22, i32* null, i32 %23)
  store i32 1, i32* %5, align 4
  br label %25

25:                                               ; preds = %14, %13
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @mp_path_exists(i8*) #1

declare dso_local i32 @MP_MSG(%struct.MPContext*, i32, i8*, i8*) #1

declare dso_local i32 @m_config_parse_config_file(i32, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
